objects/Cvent_Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Shipped_Date__c</fullName>
        <label>Actual Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>90000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Warehouse</label>
        <referenceTo>Cvent_Warehouse__c</referenceTo>
        <relationshipLabel>Cvent Shipments</relationshipLabel>
        <relationshipName>Cvent_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packlist__c</fullName>
        <label>Packlist</label>
        <referenceTo>Packlist__c</referenceTo>
        <relationshipLabel>Cvent Shipments</relationshipLabel>
        <relationshipName>Cvent_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_From__c</fullName>
        <label>Ship From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Cvent Shipment</label>
    <nameField>
        <displayFormat>Ship-{00000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>